[gd_scene load_steps=5 format=3 uid="uid://b20fqsq18q1s8"]

[ext_resource type="Script" path="res://Torpedo_big.gd" id="1_3y7oh"]
[ext_resource type="Texture2D" uid="uid://dmnw23bbyr78a" path="res://Art/torpedo_3.png" id="2_hhhct"]
[ext_resource type="AudioStream" uid="uid://brih27dctfqlj" path="res://sounds/explode01.ogg" id="3_ll8ej"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yl5kr"]
radius = 400.0

[node name="RigidBody2D" type="RigidBody2D"]
collision_layer = 8
collision_mask = 6
mass = 1000.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_3y7oh")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
polygon = PackedVector2Array(6.9999, -29, 6.99989, -30, 5.99989, -30, 5.99989, -31, 4.99989, -31, 4.99988, -32, -5.00012, -32, -5.00011, -31, -6.00011, -31, -6.00011, -30, -7.00011, -30, -7.0001, -29, -8.0001, -29, -8.0001, -27, -9.0001, -27, -8.99993, 20, -9.99993, 20, -9.99992, 21, -10.9999, 21, -10.9999, 22, -11.9999, 22, -11.9999, 23, -12.9999, 23, -12.9999, 24, -13.9999, 24.0001, -13.9999, 32, 14.0001, 31.9999, 14.0001, 23.9999, 13.0001, 24, 13.0001, 23, 12.0001, 23, 12.0001, 22, 11.0001, 22, 11.0001, 21, 10.0001, 21, 10.0001, 20, 9.00007, 20, 8.9999, -27, 7.9999, -27, 7.9999, -29)

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
rotation = 1.5708
texture = ExtResource("2_hhhct")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(34.92, -15.4239)
rotation = 1.5708
scale = Vector2(0.61362, 1.38679)
rect = Rect2(0, 0, 50, 50)

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ll8ej")
max_distance = 3000.0
max_polyphony = 124
panning_strength = 2.0
area_mask = 16

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_yl5kr")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
